@@ -61,6 +61,7 @@ export(labelManhattan)
 export(log10p)
 export(log10pvalue)
 export(logp)
+export(makeped)
 export(masize)
 export(metap)
 export(metareg)
