@@ -152,7 +152,7 @@ score <- function(chrom.pos, pair.data, ibd)
 #' # function "system".
 #'
 #' cwd <- getwd()
-#' cs.dir <- file.path(path.package("gap"),"tests/comp.score")
+#' cs.dir <- file.path(find.package("gap"),"tests/comp.score")
 #' setwd(cs.dir)
 #' dir()
 #' # system("gh < gh.inp")
