@@ -3,9 +3,6 @@
 \name{makeped}
 \alias{makeped}
 \title{A function to prepare pedigrees in post-MAKEPED format}
-\source{
-https://lab.rockefeller.edu/ott/
-}
 \usage{
 makeped(
   pifile = "pedfile.pre",
@@ -30,22 +27,16 @@ makeped(
 
 \item{auto.proband}{probands are selected automatically? 0=no, 1=yes.}
 
-\item{proband.file}{filename containing pedigree id and proband id, set if auto.proband=0 (not implemented).
-
-Before invoking makeped, input file, loop file and proband file have to be prepared.
-
-By default, auto.select=1, so translation proceeds without considering loops and proband statuses.
-If there are loops in the pedigrees, then set auto.select=0, with.loop=1, loop.file="filespec".
-
-There may be several versions of makeped available, but their differences with this port should
-be minor.}
+\item{proband.file}{filename containing pedigree id and proband id, set if auto.proband=0 (not implemented).}
 }
 \description{
+A function to prepare pedigrees in post-MAKEPED format
+}
+\details{
 Many computer programs for genetic data analysis requires pedigree data to be in the so-called
 ``post-MAKEPED'' format. This function performs this translation and allows for some
 inconsistences to be detected.
-}
-\details{
+
 The first four columns of the input file contains the following information:
 
 pedigree ID, individual ID, father's ID, mother's ID, sex
@@ -55,6 +46,14 @@ Numeric coding for sex is 0=unknown, 1=male, 2=female. These can be followed by 
 information such as disease phenotype and marker information.
 
 The output file has extra information extracted from data above.
+
+Before invoking makeped, input file, loop file and proband file have to be prepared.
+
+By default, auto.select=1, so translation proceeds without considering loops and proband statuses.
+If there are loops in the pedigrees, then set auto.select=0, with.loop=1, loop.file="filespec".
+
+There may be several versions of makeped available, but their differences with this port should
+be minor.
 }
 \note{
 adapted from makeped.c by W Li and others.
@@ -63,11 +62,12 @@ keywords datagen
 \examples{
 \dontrun{
 cwd <- getwd()
-cs.dir <- file.path(path.package("gap.datasets"),"tests","kinship")
+cs.dir <- file.path(find.package("gap.examples"),"tests","kinship")
 setwd(cs.dir)
 dir()
 makeped("ped7.pre","ped7.ped",0,1,"ped7.lop")
 setwd(cwd)
+# https://lab.rockefeller.edu/ott/
 }
 
 }
