@@ -4,10 +4,16 @@ Version 1.3-2
 07-01-2023	gap.Rmd now uses bookdown with `convert -resize 60% IL.12B-mhtplot.trunc.png IL-12B.png`
 			and appropriate citations
 		Rename `gsmr` to `mr` with the test data reading from the console
+		Replace path.package() with find.package()
 		Move `...` from pdf() to meta() in METAL_forestplot()
 		sprintf --> snprintf following https://developer.r-project.org/blosxom.cgi/R-devel/2022/12/04
 		Simplify miamiplot2 code
+		Export makeped()
 		Document/export  hap.control(), KCC() due to query from Cecil Asa-Atiemo <asaatiemo@gmail.com>
+		Fix LLVM clang >= 15 is used in C23 mode (https://www.stats.ox.ac.uk/pub/bdr/C23/):
+			gcontrol_c.c r variables not used,
+			makeped_c.c fscanf() may overflow,
+			pgc.h enum expects identifier
 
 Version 1.3-1
 20-10-2022	Remove README.md and mask miamiplot2 example
